--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/client": "^6.15.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "prisma": "^6.15.0",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
